# matrix

./: AUTHORS  Makefile.am  THANKS  configure.ac
src/: Makefile.am
src/matrix/: matrix.hpp  matrix.impl.hpp  vector.hpp  vector.impl.hpp
src/tests/: 02_vector_exceptions.cpp  03_matrix_base.cpp  04_matrix_exceptions.cpp  05_matrix_product.cpp  Makefile.am  test_base.cpp  test_exceptions.cpp
